--- a/mod2-solution/css/styles.css
+++ b/mod2-solution/css/styles.css
@@ -1,183 +1,95 @@
 * {
 	box-sizing: border-box;
+  font-family: sans-serif;
+  overflow: hidden;
+  margin: 0px;
+  padding: 0px;
 }
 
-h1 {
+#title {
 	text-align: center;
-	font-family: Helvetica;
-	font-size: 175%;
-}
-
-div {
-
-}
-
-p {
-	background-color: gray;
-	width: 90%;
-	margin-right: auto;
-	margin-left: auto;
-	font-family: Helvetica;
-	color: white;
-}
-
-.menu-card {
-	border: 1px solid green;
-	position: relative;
-	height: 90%;
-	width: 90%
-	margin-right: auto;
-	margin-left: auto;
-	font-family: Helvetica;
-	color: white;
-	background-color:gray;
-	padding: 5px;
+	font-size: 1.75em;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .menu-title {
-	font-family: Helvetica;
-	font-size: 125%;
-	background-color: white;
-	color: black;
-	border: 1px solid red;
-	position: absolute;
-	height: 25px;
-	width: 100px;
-	text-align: center;
+  font-size: 1.25em;
+  color: black;
+  position: relative;
+  left: 50%;
+  width: 50%;
+  margin: 0px;
+  text-align: center;
+  border-left: 1px solid black;
+  border-bottom: 1px solid black;
+  border-radius: 5px;
+  font-style: italic;
+  font-weight: bold;
 }
 
-.row {
-	width: 100%;
+.container {
+  margin: 0px auto;
+  align-items: center;
+}
+
+.menu-card {
+  margin: 5px;
+  border: 1px solid black;
+  background-color: #dddddd;
+}
+
+.menu-description {
+  margin-bottom: 5px;
+  text-align: justify;
+}
+
+p {
+  padding: 5px;
+	width: 90%;
+	margin-right: auto;
+	margin-left: auto;
+}
+
+#chicken div {
+  background-color: #b6f2a4;
+}
+
+#chicken p.menu-title {
+  background-color: #58e52d;
+}
+
+#beef div {
+  background-color: #89e0f2;
+}
+
+#beef p.menu-title {
+  background-color: #11c7ee;
+}
+
+#sushi div {
+  background-color: #f2dbf2;
+}
+
+#sushi p.menu-title {
+  background-color: #eb9fec;
 }
 
 /******* DESKTOP *******/
-@media (min-width: 992px) {
-	.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
-    float: left;
-    border: 1px solid blue;
-  }
-  .col-lg-1 {
-    width: 8.33%;
-  }
-  .col-lg-2 {
-    width: 16.66%;
-  }
-  .col-lg-3 {
-    width: 25%;
-  }
-  .col-lg-4 {
-    width: 33.33%;
-  }
-  .col-lg-5 {
-    width: 41.66%;
-  }
-  .col-lg-6 {
-    width: 50%;
-  }
-  .col-lg-7 {
-    width: 58.33%;
-  }
-  .col-lg-8 {
-    width: 66.66%;
-  }
-  .col-lg-9 {
-    width: 74.99%;
-  }
-  .col-lg-10 {
-    width: 83.33%;
-  }
-  .col-lg-11 {
-    width: 91.66%;
-  }
-  .col-lg-12 {
-    width: 100%;
+@media(min-width:992px){
+  .col-lg{
+    float:left;
+    width:33.33%;
   }
 }
 
 /******* TABLET *******/
 @media (min-width: 768px) and (max-width: 991px) {
-  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
-    float: left;
-    border: 1px solid blue;
+  .col-md{
+    float:left;
+    width:50%;
   }
-  .col-md-1 {
-    width: 8.33%;
-  }
-  .col-md-2 {
-    width: 16.66%;
-  }
-  .col-md-3 {
-    width: 25%;
-  }
-  .col-md-4 {
-    width: 33.33%;
-  }
-  .col-md-5 {
-    width: 41.66%;
-  }
-  .col-md-6 {
-    width: 50%;
-  }
-  .col-md-7 {
-    width: 58.33%;
-  }
-  .col-md-8 {
-    width: 66.66%;
-  }
-  .col-md-9 {
-    width: 74.99%;
-  }
-  .col-md-10 {
-    width: 83.33%;
-  }
-  .col-md-11 {
-    width: 91.66%;
-  }
-  .col-md-12 {
-    width: 100%;
-  }
-}
-
-/******* MOBILE *******/
-@media (max-width: 767px) {
-  .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
-    float: left;
-    border: 1px solid blue;
-  }
-  .col-sm-1 {
-    width: 8.33%;
-  }
-  .col-sm-2 {
-    width: 16.66%;
-  }
-  .col-sm-3 {
-    width: 25%;
-  }
-  .col-sm-4 {
-    width: 33.33%;
-  }
-  .col-sm-5 {
-    width: 41.66%;
-  }
-  .col-sm-6 {
-    width: 50%;
-  }
-  .col-sm-7 {
-    width: 58.33%;
-  }
-  .col-sm-8 {
-    width: 66.66%;
-  }
-  .col-sm-9 {
-    width: 74.99%;
-  }
-  .col-sm-10 {
-    width: 83.33%;
-  }
-  .col-sm-11 {
-    width: 91.66%;
-  }
-  .col-sm-12 {
-    width: 100%;
+  #sushi{
+    width:100%;
   }
 }
