--- a/mod2-solution/css/styles.css
+++ b/mod2-solution/css/styles.css
@@ -1,6 +1,6 @@
 * {
 	box-sizing: border-box;
-  font-family: sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   overflow: hidden;
   margin: 0px;
   padding: 0px;
@@ -11,6 +11,7 @@
 	font-size: 1.75em;
   padding-top: 20px;
   padding-bottom: 20px;
+  font-weight: bold;
 }
 
 .menu-title {
