--- a/mod2-solution/css/styles.css
+++ b/mod2-solution/css/styles.css
@@ -16,17 +16,17 @@
 
 .menu-title {
   font-size: 1.25em;
-  color: black;
-  position: relative;
-  left: 50%;
-  width: 50%;
-  margin: 0px;
-  text-align: center;
-  border-left: 1px solid black;
+  border-width: 1px;
   border-bottom: 1px solid black;
-  border-radius: 5px;
-  font-style: italic;
+  border-left: 1px solid black;
   font-weight: bold;
+  width: 150px;
+  float: right;
+  padding: 3px;
+  text-align: center;
+  margin-left: 0px;
+  margin-right: -15px;
+  margin-top: -35px;
 }
 
 .container {
@@ -35,44 +35,37 @@
 }
 
 .menu-card {
-  margin: 5px;
+  margin: 15px;
+  padding: 35px 15px 15px 15px;
   border: 1px solid black;
-  background-color: #dddddd;
-}
-
-.menu-description {
-  margin-bottom: 5px;
+  background-color: #eeeeee;
   text-align: justify;
 }
 
 p {
+  display: block;
   padding: 5px;
-	width: 90%;
 	margin-right: auto;
 	margin-left: auto;
 }
 
-#chicken div {
-  background-color: #b6f2a4;
+div {
+  display: block;
 }
 
-#chicken p.menu-title {
+#chicken p, #beef p, #sushi p {
+  background-color: #F7F6F5;
+}
+
+#chicken span.menu-title {
   background-color: #58e52d;
 }
 
-#beef div {
-  background-color: #89e0f2;
-}
-
-#beef p.menu-title {
+#beef span.menu-title {
   background-color: #11c7ee;
 }
 
-#sushi div {
-  background-color: #f2dbf2;
-}
-
-#sushi p.menu-title {
+#sushi span.menu-title {
   background-color: #eb9fec;
 }
 
