--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -109,7 +109,7 @@ a {
 .main-content img {
   max-width: 100%; }
 .main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
-  margin-top: 2rem;
+  margin-top: 1rem;
   margin-bottom: 1rem;
   font-weight: normal;
   color: #159957; }
@@ -199,9 +199,10 @@ a {
 .main-content hr {
   height: 2px;
   padding: 0;
-  margin: 1rem 0;
-  background-color: #eff0f1;
-  border: 0; }
+  margin: 1rem auto;
+  background-color: #159957;
+  border: 0; 
+  width: 75%;}
 
 @media screen and (min-width: 64em) {
   .main-content {
@@ -243,3 +244,23 @@ a {
 @media screen and (max-width: 42em) {
   .site-footer {
     font-size: 0.9rem; } }
+
+/* Additional CSS for customization */
+#assignment-list {
+  list-style: none;
+  padding-left: 20px;
+}
+
+#assignment-list a, #assignment-list a:hover {
+  color: #159957;
+  text-decoration: none;
+}
+
+li p {
+  text-align: justify;
+}
+
+p > a:hover {
+  text-decoration: none;
+}
+
