Played around with :hover

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -264,7 +264,16 @@ p > a:hover {
   text-decoration: none;
 }
 
-em {
+.dynamically {
+  font-style: italic;
   color: #808080;
 }
+
+.dynamically:hover {
+  color: #159957;
+}
+
+
+
+
 
